--- a/package.json
+++ b/package.json
@@ -3,17 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/axios-mock-adapter": "^1.10.0",
+    "@types/classnames": "^2.2.7",
+    "@types/faker": "^4.1.5",
+    "@types/react-text-mask": "^5.4.4",
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.16.0",
+    "classnames": "^2.2.6",
+    "customize-cra": "^0.2.12",
+    "faker": "^4.1.0",
     "formik": "^1.5.7",
     "react": "^16.8.6",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.2.0",
+    "styled-reset": "^2.0.12",
     "typesafe-actions": "^3.2.1",
-    "typescript": "3.4.5",
+    "typescript": "^3.3.4000",
     "utility-types": "^3.7.0",
     "yup": "^0.27.0"
   },
@@ -25,18 +38,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "@types/jest": "24.0.13",
@@ -52,5 +53,17 @@
     "@types/webpack-env": "^1.13.9",
     "@types/yup": "^0.26.13",
     "redux-devtools-extension": "^2.13.8"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
