--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "@types/styled-components": "^4.1.15",
     "@types/webpack-env": "^1.13.9",
     "@types/yup": "^0.26.13",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "react-redux-typescript-scripts": "^1.6.2",
     "redux-devtools-extension": "^2.13.8"
   },
   "browserslist": {
